暂时放弃了用threejs.转向了Babylon.js.现在考虑需要选用了物理引擎(Cannon.js.Ammo.js.Oimo.js)目前的三个候选.都在考虑.可能用unity去做游戏吧.感觉还是应该选用已有的更适合游戏的开发引擎.而不是自己手搓实现.感觉这有点太愚蠢了.

--- a/web-game-three/index.html
+++ b/web-game-three/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue + TS</title>
+    <title>WebGL FPS Game - 基于Babylon.js的3D射击游戏</title>
+    <meta name="description" content="一个基于 Babylon.js 构建的 3D 第一人称射击游戏，支持单人和多人游戏模式">
   </head>
   <body>
     <div id="app"></div>
